// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News should filter results based on category query and asset 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 iNqwXn flex w-12"
          disabled=""
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
            data-testid="navigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
            data-testid="navigationBar__notifications"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
            data-testid="navigationBar__userInfo"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf bg-theme-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-2xl"
                data-testid="header__title"
              >
                Cryptoasset News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    class="text-theme-text"
                    height="20"
                    width="65"
                  >
                    ftx.svg
                  </svg>
                </div>
              </div>
            </div>
            <div>
              <div
                class="relative"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-3 h-5"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-bdnxRM NjstW"
                        height="20"
                        width="20"
                      >
                        <svg>
                          magnifying-glass.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="HeaderSearchBar__SearchBarInputWrapper-sc-1c89d5c-0 kJtOVa absolute z-20 flex items-center text-base px-10 -mx-10 py-4 rounded-lg shadow-xl bg-theme-background transform top-1/2 -translate-y-1/2 right-3"
                  data-testid="HeaderSearchBar__input"
                >
                  <button
                    class="focus:outline-none transition-all duration-300"
                    data-testid="header-search-bar__reset"
                    type="button"
                  >
                    <div
                      class="sc-bdnxRM AFVmm text-theme-text transition-all duration-300 w-0"
                      height="16"
                      width="16"
                    >
                      <svg>
                        cross.svg
                      </svg>
                    </div>
                  </button>
                  <div
                    class="flex-1"
                  >
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 hyKEbr -ml-4"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="Input"
                          maxlength="32"
                          placeholder="Search..."
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-bdnxRM NjstW text-theme-primary-300 dark:text-theme-secondary-600"
                    height="20"
                    width="20"
                  >
                    <svg>
                      magnifying-glass.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf flex-1 bg-theme-secondary-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-5 xl:space-x-8"
          >
            <div
              class="flex-none w-2/3"
            >
              <div
                class="space-y-5"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="bg-theme-background"
                  >
                    <button
                      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
                      data-testid="Card"
                      tabindex="-1"
                      type="button"
                    >
                      <div
                        class="flex flex-col p-5 space-y-6 bg-theme-background"
                      >
                        <div
                          class="flex justify-between w-full"
                        >
                          <div
                            class="flex items-center space-x-4"
                          >
                            <div
                              aria-label="ARK"
                              class="Circle__CircleWrapper-sc-d5u41q-0 fgSjup text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
                              data-testid="NetworkIcon-ARK-ark.mainnet"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                data-testid="NetworkIcon__icon"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                            <div>
                              <h4
                                class="text-lg font-semibold"
                                data-testid="NewsCard__asset-ARK"
                              >
                                ARK
                              </h4>
                              <div
                                class="flex items-center space-x-4"
                              >
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__author"
                                >
                                  Travis Walker, Co-Founder
                                </p>
                                <div
                                  class="Divider-sc-17ehhxk-0 iLifLj border-theme-secondary-300 dark:border-theme-secondary-800"
                                  type="vertical"
                                />
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__date-created"
                                >
                                  <span
                                    data-testid="TimeAgo"
                                  >
                                    A few seconds ago
                                  </span>
                                </p>
                              </div>
                            </div>
                          </div>
                          <div
                            class="flex flex-col justify-end"
                          >
                            <div
                              class="Label-sc-4akkzw-0 JnfDk"
                              color="warning"
                            >
                              <span
                                class="text-sm mx-1"
                                data-testid="NewsCard__category"
                              >
                                #Technical
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Divider-sc-17ehhxk-0 lgtApE border-theme-secondary-300 dark:border-theme-secondary-800"
                          type="horizontal"
                        />
                        <div
                          class="whitespace-pre-line text-theme-secondary-text"
                          data-testid="NewsCard__content"
                        >
                          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
                          <a
                            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="Link"
                            href="#"
                            rel="noopener noreferrer"
                            to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
                          >
                            <span
                              class="Link__Content-sc-ec014t-1 hUiuRR"
                            >
                              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
                            </span>
                            <div
                              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                              data-testid="Link__external"
                              height="16"
                              width="16"
                            >
                              <svg>
                                arrow-external.svg
                              </svg>
                            </div>
                          </a>
                        </div>
                      </div>
                      <div
                        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="FTX Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="ftx-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col items-start space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://ftx.com/"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            ftx.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center mt-10 w-full"
              >
                <nav
                  class="Pagination__Wrapper-sc-1rc32i9-0 gurSFZ"
                  data-testid="Pagination"
                >
                  <div
                    class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <button
                      aria-current="true"
                      aria-label="Page 1"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy current-page"
                      type="button"
                    >
                      1
                    </button>
                    <button
                      aria-label="Page 2"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      2
                    </button>
                    <button
                      aria-label="Page 3"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      3
                    </button>
                    <button
                      aria-label="Page 4"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      4
                    </button>
                    <button
                      aria-label="Page 5"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      5
                    </button>
                    <button
                      aria-label="Page 6"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      6
                    </button>
                    <button
                      aria-label="Page 7"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      7
                    </button>
                    <button
                      class="PaginationSearch__PaginationSearchButtonStyled-sc-1kkee2s-1 iohkui group"
                      data-testid="PaginationSearchButton"
                      type="button"
                    >
                      <span
                        class="group-hover:invisible"
                      >
                        <span>
                          …
                        </span>
                      </span>
                      <span
                        class="flex absolute top-0 right-0 bottom-0 left-0 invisible justify-center items-center group-hover:visible"
                        data-testid="PaginationSearchButton__search"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            magnifying-glass.svg
                          </svg>
                        </div>
                      </span>
                    </button>
                  </div>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                    data-testid="Pagination__next"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Next
                      <div
                        class="sc-bdnxRM AkeAK ml-2"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-right-small.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                    data-testid="Pagination__last"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM AkeAK"
                        height="10"
                        width="10"
                      >
                        <svg>
                          double-chevron-right-small.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </nav>
              </div>
            </div>
            <div
              class="relative w-1/3"
            >
              <div
                class="sticky top-26"
                data-testid="NewsOptions"
              >
                <div
                  class="overflow-y-auto p-10 pb-4 max-h-full rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <div
                    class="flex flex-col space-y-8"
                  >
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <div
                        class="flex justify-between items-center"
                      >
                        <h5
                          class="font-semibold"
                        >
                          Category
                        </h5>
                      </div>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Select your categories
                      </p>
                      <div
                        class="flex flex-wrap -mx-1"
                      >
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Community"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Community
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Emergency"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Emergency
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Marketing"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Marketing
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Technical"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Technical
                          </div>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Filter Assets
                      </h5>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Your current selections:
                      </p>
                      <div
                        class="pb-2.5"
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="flex flex-wrap"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__ark.mainnet"
                          >
                            <div
                              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative border-theme-success-500 text-theme-success-500 ring-theme-background"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK"
                                  height="10"
                                  width="10"
                                >
                                  <svg>
                                    check-mark-small.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`News should render 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 iNqwXn flex w-12"
          disabled=""
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
            data-testid="navigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
            data-testid="navigationBar__notifications"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
            data-testid="navigationBar__userInfo"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf bg-theme-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-2xl"
                data-testid="header__title"
              >
                Cryptoasset News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    class="text-theme-text"
                    height="20"
                    width="65"
                  >
                    ftx.svg
                  </svg>
                </div>
              </div>
            </div>
            <div>
              <div
                class="relative"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-3 h-5"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-bdnxRM NjstW"
                        height="20"
                        width="20"
                      >
                        <svg>
                          magnifying-glass.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf flex-1 bg-theme-secondary-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-5 xl:space-x-8"
          >
            <div
              class="flex-none w-2/3"
            >
              <div
                class="space-y-5"
              >
                <div
                  data-testid="NewsCard"
                >
                  <div
                    class="bg-theme-background"
                  >
                    <button
                      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
                      data-testid="Card"
                      tabindex="-1"
                      type="button"
                    >
                      <div
                        class="flex flex-col p-5 space-y-6 bg-theme-background"
                      >
                        <div
                          class="flex justify-between w-full"
                        >
                          <div
                            class="flex items-center space-x-4"
                          >
                            <div
                              aria-label="ARK"
                              class="Circle__CircleWrapper-sc-d5u41q-0 fgSjup text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background"
                              data-testid="NetworkIcon-ARK-ark.mainnet"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                data-testid="NetworkIcon__icon"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                            <div>
                              <h4
                                class="text-lg font-semibold"
                                data-testid="NewsCard__asset-ARK"
                              >
                                ARK
                              </h4>
                              <div
                                class="flex items-center space-x-4"
                              >
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__author"
                                >
                                  Travis Walker, Co-Founder
                                </p>
                                <div
                                  class="Divider-sc-17ehhxk-0 iLifLj border-theme-secondary-300 dark:border-theme-secondary-800"
                                  type="vertical"
                                />
                                <p
                                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                                  data-testid="NewsCard__date-created"
                                >
                                  <span
                                    data-testid="TimeAgo"
                                  >
                                    A few seconds ago
                                  </span>
                                </p>
                              </div>
                            </div>
                          </div>
                          <div
                            class="flex flex-col justify-end"
                          >
                            <div
                              class="Label-sc-4akkzw-0 JnfDk"
                              color="warning"
                            >
                              <span
                                class="text-sm mx-1"
                                data-testid="NewsCard__category"
                              >
                                #Technical
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Divider-sc-17ehhxk-0 lgtApE border-theme-secondary-300 dark:border-theme-secondary-800"
                          type="horizontal"
                        />
                        <div
                          class="whitespace-pre-line text-theme-secondary-text"
                          data-testid="NewsCard__content"
                        >
                          Recently we released our all-in-one toolkit the ARK Platform SDK, along with an overview and what blockchain projects it will initially support. Today we are going into more details on a technical level. 
                          <a
                            class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                            data-ring-focus-margin="-m-1"
                            data-testid="Link"
                            href="#"
                            rel="noopener noreferrer"
                            to="https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461"
                          >
                            <span
                              class="Link__Content-sc-ec014t-1 hUiuRR"
                            >
                              https://blog.ark.io/ark-platform-sdk-modernization-of-blockchain-network-interactions-b5a7d70c2461
                            </span>
                            <div
                              class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                              data-testid="Link__external"
                              height="16"
                              width="16"
                            >
                              <svg>
                                arrow-external.svg
                              </svg>
                            </div>
                          </a>
                        </div>
                      </div>
                      <div
                        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="relative"
                >
                  <div
                    class="flex absolute top-0 right-4 text-center rounded-b-xl bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <span
                      class="px-2 pt-1 pb-2 text-xs font-semibold text-theme-primary-600"
                    >
                      Ad
                    </span>
                  </div>
                  <img
                    alt="FTX Banner"
                    class="w-full rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                    src="ftx-banner.png"
                  />
                  <div
                    class="absolute left-10 top-16"
                  >
                    <div
                      class="flex flex-col items-start space-y-5 text-white"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://ftx.com/"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="-mx-8 text-white"
                            height="47"
                            width="238"
                          >
                            ftx.svg
                          </svg>
                        </span>
                      </a>
                      <p
                        class="w-3/4 text-lg font-medium"
                      >
                        The world's most popular Bitcoin & cryptocurrency portfolio tracker. 100% free.
                      </p>
                    </div>
                    <div
                      class="flex mt-12 space-x-2"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://itunes.apple.com/us/app/blockfolio-bitcoin-altcoin/id1095564685?mt=8"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="w-32 h-10 b-0"
                          >
                            download-app-store.svg
                          </svg>
                        </span>
                      </a>
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://play.google.com/store/apps/details?id=com.blockfolio.blockfolio&hl=en_US"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <svg
                            class="w-32 h-10"
                          >
                            download-google-play.svg
                          </svg>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-center mt-10 w-full"
              >
                <nav
                  class="Pagination__Wrapper-sc-1rc32i9-0 gurSFZ"
                  data-testid="Pagination"
                >
                  <div
                    class="flex relative px-2 rounded bg-theme-primary-100 dark:bg-theme-secondary-800"
                  >
                    <button
                      aria-current="true"
                      aria-label="Page 1"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy current-page"
                      type="button"
                    >
                      1
                    </button>
                    <button
                      aria-label="Page 2"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      2
                    </button>
                    <button
                      aria-label="Page 3"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      3
                    </button>
                    <button
                      aria-label="Page 4"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      4
                    </button>
                    <button
                      aria-label="Page 5"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      5
                    </button>
                    <button
                      aria-label="Page 6"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      6
                    </button>
                    <button
                      aria-label="Page 7"
                      class="Pagination__PaginationButtonStyled-sc-1rc32i9-1 REFYy"
                      type="button"
                    >
                      7
                    </button>
                    <button
                      class="PaginationSearch__PaginationSearchButtonStyled-sc-1kkee2s-1 iohkui group"
                      data-testid="PaginationSearchButton"
                      type="button"
                    >
                      <span
                        class="group-hover:invisible"
                      >
                        <span>
                          …
                        </span>
                      </span>
                      <span
                        class="flex absolute top-0 right-0 bottom-0 left-0 invisible justify-center items-center group-hover:visible"
                        data-testid="PaginationSearchButton__search"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            magnifying-glass.svg
                          </svg>
                        </div>
                      </span>
                    </button>
                  </div>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                    data-testid="Pagination__next"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Next
                      <div
                        class="sc-bdnxRM AkeAK ml-2"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-right-small.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                    data-testid="Pagination__last"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdnxRM AkeAK"
                        height="10"
                        width="10"
                      >
                        <svg>
                          double-chevron-right-small.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </nav>
              </div>
            </div>
            <div
              class="relative w-1/3"
            >
              <div
                class="sticky top-26"
                data-testid="NewsOptions"
              >
                <div
                  class="overflow-y-auto p-10 pb-4 max-h-full rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <div
                    class="flex flex-col space-y-8"
                  >
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <div
                        class="flex justify-between items-center"
                      >
                        <h5
                          class="font-semibold"
                        >
                          Category
                        </h5>
                      </div>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Select your categories
                      </p>
                      <div
                        class="flex flex-wrap -mx-1"
                      >
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Community"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Community
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Emergency"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Emergency
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Marketing"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Marketing
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Technical"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Technical
                          </div>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Filter Assets
                      </h5>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Your current selections:
                      </p>
                      <div
                        class="pb-2.5"
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="flex flex-wrap"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__ark.mainnet"
                          >
                            <div
                              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative border-theme-success-500 text-theme-success-500 ring-theme-background"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK"
                                  height="10"
                                  width="10"
                                >
                                  <svg>
                                    check-mark-small.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`News should show error toast if news cannot be fetched 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 iNqwXn flex w-12"
          disabled=""
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
            data-testid="navigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
            data-testid="navigationBar__notifications"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
            data-testid="navigationBar__userInfo"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf bg-theme-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-2xl"
                data-testid="header__title"
              >
                Cryptoasset News
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <span
                    class="font-semibold text-theme-secondary-text"
                  >
                    Powered by
                  </span>
                  <svg
                    class="text-theme-text"
                    height="20"
                    width="65"
                  >
                    ftx.svg
                  </svg>
                </div>
              </div>
            </div>
            <div>
              <div
                class="relative"
                data-testid="HeaderSearchBar"
              >
                <div
                  class="group"
                >
                  <button
                    class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 cWmnHb ring-focus"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-3 h-5"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-bdnxRM NjstW"
                        height="20"
                        width="20"
                      >
                        <svg>
                          magnifying-glass.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 hKDKdf flex-1 bg-theme-secondary-background"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="container flex space-x-5 xl:space-x-8"
          >
            <div
              class="flex-none w-2/3"
            >
              <div
                class="flex flex-col justify-center h-full text-center bg-theme-background rounded-lg border-2 border-theme-primary-100 dark:border-theme-secondary-800"
                data-testid="EmptyResults"
              >
                <div>
                  <div
                    class="mb-4 text-lg font-bold"
                  >
                    No Results
                  </div>
                  <div
                    class="mb-8 text-md"
                  >
                    No results found. Refine your search and try again.
                  </div>
                  <div
                    class="my-4 mx-auto w-128"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-1/3"
            >
              <div
                class="sticky top-26"
                data-testid="NewsOptions"
              >
                <div
                  class="overflow-y-auto p-10 pb-4 max-h-full rounded-lg border-2 bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800"
                >
                  <div
                    class="flex flex-col space-y-8"
                  >
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <div
                        class="flex justify-between items-center"
                      >
                        <h5
                          class="font-semibold"
                        >
                          Category
                        </h5>
                      </div>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Select your categories
                      </p>
                      <div
                        class="flex flex-wrap -mx-1"
                      >
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Community"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Community
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Emergency"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Emergency
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Marketing"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Marketing
                          </div>
                        </label>
                        <label
                          class="SelectCategory___StyledLabel-sc-1dgc7bb-2 ghVPbK p-1"
                          data-testid="NewsOptions__category-Technical"
                        >
                          <input
                            checked=""
                            class="SelectCategory__Input-sc-1dgc7bb-0 hJcIAQ"
                            type="checkbox"
                            value=""
                          />
                          <div
                            class="SelectCategory__CustomButton-sc-1dgc7bb-1 fjVhRK"
                          >
                            #Technical
                          </div>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Divider-sc-17ehhxk-0 hZpmpp border-theme-secondary-300 dark:border-theme-secondary-800"
                      type="horizontal"
                    />
                    <div
                      class="flex flex-col space-y-3"
                    >
                      <h5
                        class="font-semibold"
                      >
                        Filter Assets
                      </h5>
                      <p
                        class="text-sm text-theme-secondary-500"
                      >
                        Your current selections:
                      </p>
                      <div
                        class="pb-2.5"
                        data-testid="FilterNetwork"
                      >
                        <ul
                          class="flex flex-wrap"
                          data-testid="NetworkOptions"
                        >
                          <li
                            class="inline-block pr-5 pb-5 cursor-pointer"
                            data-testid="NetworkOption__ark.mainnet"
                          >
                            <div
                              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb relative border-theme-success-500 text-theme-success-500 ring-theme-background"
                            >
                              <div
                                class="sc-bdnxRM NjstW"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                              <span
                                class="Badge__Wrapper-sc-w9wbbm-0 iNGskz flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-100"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK"
                                  height="10"
                                  width="10"
                                >
                                  <svg>
                                    check-mark-small.svg
                                  </svg>
                                </div>
                                <span />
                              </span>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
